2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/catalogs/vault1.cat,
	  installcheck/catalogs/vault2.cat,
	  installcheck/catalogs/vault3.cat: Fix for previous patch

2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/DB/Catalog.pm: s/exists/defined/g
	* perl/Amanda/Recovery/Planner.pm: Pass separate args to get_dumps
	  instead of a dumpspecs (becasue it match instead of equal)
	* perl/Amanda/Report.pm: storage_list must include vault-storage
	* perl/Amanda/Status.pm: Fix
	* perl/Amanda/Taper/Worker.pm: Pass separate args to make_plan
	  instead of a dumpspecs (becasue it match instead of equal)
	* installcheck/success-dumper-taper-vault.pl: New check
	* installcheck/Makefile.am: Add success-dumper-taper-vault.pl

2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c: Do not cwgenerate error when appying override
	  until the complete configuration is read
	* common-src/conffile.h: Define CONFIG_OVERRDIDE_NO_ERROR
	* perl/Amanda/Config.swg: Define CONFIG_OVERRDIDE_NO_ERROR
	* installcheck/amgetconf.pl: Test it

2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Use good try
	* server-src/tapefile.c: Call find_dump with added_todo=1
	* installcheck/Makefile.am (catalogs): Add catalogs/vault3.cat
	* installcheck/amreport.pl: Check successful flush/vault
	* installcheck/catalogs/vault3.cat: New catalog

2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Taper/Worker.pm: Fix for one of the previous patch
	* installcheck/Makefile.am (catalogs): Add catalogs/vault2.cat
	* installcheck/amreport.pl: Check successful vault
	* installcheck/catalogs/vault2.cat: New catalog

2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix tape_rape for VAULT
	* installcheck/catalogs/vault1.cat: Fxi test

2017-11-09  Jean-Louis Martineau <JMartineau@carbonite.com>