@@ -1,4 +1,8 @@
 2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
+	* perl/Amanda/Status.pm: Fix setting dlet
+	* installcheck/success-dumper-taper-vault.pl: Fix
+
+2017-11-10  Jean-Louis Martineau <JMartineau@carbonite.com>
 	* installcheck/catalogs/vault1.cat,
 	  installcheck/catalogs/vault2.cat,
 	  installcheck/catalogs/vault3.cat: Fix for previous patch
